# non-newtonian-gate

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  create_batch.py  create_double_channel_batch.py  create_single_channel_batch.py  double_channel_batch.sh  double_channel_runs.cpp  evaluate_thermalisation.ipynb  examinations_runs.cpp  find_unicorn.cpp  get_bounces.py  investigate_relations.cpp  main.cpp  mass_spread_over_time.ipynb  parameter_exploration.py  params.json  params_double_channel.json  params_single_channel.json  plot_data.py  plot_thermalisation.py  populate.sh  relation_finder.ipynb  run_batch.py  run_batch.sh  run_double_channel_full.sh  run_full.sh  run_single_channel_full.sh  simulation.cpp  simulation.h  single_channel_batch.sh  single_channel_full.sh  single_channel_runs.cpp  test_simulation.cpp  visualise.py
