cmake_minimum_required(VERSION 3.10)
project(terrier)

set(CMAKE_CXX_STANDARD 14)
find_package(Boost COMPONENTS unit_test_framework REQUIRED)
add_executable(terrier main.cpp simulation.cpp simulation.h)
add_executable(test_terrier test_simulation.cpp simulation.cpp simulation.h)
target_link_libraries(terrier)
target_link_libraries(test_terrier ${Boost_LIBRARIES})
enable_testing()
add_definitions(-DBOOST_TEST_DYN_LINK)
add_test(test_terrier test_terrier)
file(COPY visualise.py DESTINATION .)