cmake_minimum_required(VERSION 3.10)
project(terrier)

set(CMAKE_CXX_STANDARD 14)
find_package(Boost COMPONENTS unit_test_framework)
if (Boost_FOUND)
    message("Boost is found")
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(test_terrier test_simulation.cpp simulation.cpp simulation.h)
    target_link_libraries(test_terrier ${Boost_LIBRARIES})
    enable_testing()
    add_definitions(-DBOOST_TEST_DYN_LINK)
    add_test(test_terrier test_terrier)
else ()
    message(WARNING "Boost unit test framework not found, building without test suite.
To enable test suite, please install boost")
endif ()
add_executable(terrier main.cpp simulation.cpp simulation.h)
add_executable(find_anti find_unicorn.cpp simulation.cpp simulation.h)

add_executable(parameter_test investigate_relations.cpp simulation.cpp simulation.h)
target_link_libraries(terrier)
target_link_libraries(find_anti)
target_link_libraries(parameter_test)

file(COPY visualise.py parameter_exploration.py create_batch.py run_batch.sh params.json DESTINATION .)
